@@ -1,7 +1,12 @@
 This is the CHANGELOG for amavisd-milter.
 
+20120727:
+	Include stdbool.h before libmilter/mfapi.h in compat/compat.h because
+	libmilter/mfapi.h not define true and false.
+
 20101105:
-	Fixed typo in aclocal/ax_path_milter.m4 which prevents using LDFLAGS on Debian.
+	Fixed typo in aclocal/ax_path_milter.m4 which prevents using LDFLAGS
+	on Debian.
 
         Thanks to: Harald Jenny <harald@a-little-linux-box.at>
 
@@ -412,4 +417,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.72 2010/05/02 11:20:50 reho Exp $
+$Id: CHANGES,v 1.73 2010/11/04 23:47:50 reho Exp $
